src/objects/Customer_Account_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>A3_Account__c</fullName>
        <formula>Cust_Snap_Account_Health__c = &quot;A3 - Reference&quot;</formula>
        <label>A3 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABM_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABM Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Category_Auto__c</fullName>
        <label>Account Category (Auto)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Cust_Snap_Account_Name__r.Acct18__c</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cons_Pipe_N4Q__c</fullName>
        <label>Cons Pipe (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date (2)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cust_SnapStudents__c</fullName>
        <label># Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_A1_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A1 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_A2_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A2 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Account_Health__c</fullName>
        <label>Account Health</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Account Snapshots</relationshipLabel>
        <relationshipName>Customer_Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Bookings_L4Q__c</fullName>
        <label>Bookings (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_C0_Cases__c</fullName>
        <label># C0 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_C1_Cases__c</fullName>
        <label># C1 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_C2_Cases__c</fullName>
        <label># C2 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Case_Affected_Users__c</fullName>
        <label>Case Affected Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Case_Pain__c</fullName>
        <label>Case Pain</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Cases__c</fullName>
        <label># Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Closed_Cases__c</fullName>
        <label># Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Cons_Fcst_N4Q__c</fullName>
        <label>Cons Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Cons_L4Q__c</fullName>
        <label>Cons (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Contacts__c</fullName>
        <label># Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Customer_Status__c</fullName>
        <label>Account Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Edu_Fcst_N4Q__c</fullName>
        <label>Edu Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Edu_L4Q__c</fullName>
        <label>Edu (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Fcst_N4Q__c</fullName>
        <label>Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Health_Check_Completed__c</fullName>
        <label>Health Check Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Health_Checks__c</fullName>
        <label># Health Checks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Lic_Fcst_N4Q__c</fullName>
        <label>Lic Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_OA__c</fullName>
        <label>%OA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Open_Cases__c</fullName>
        <label># Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Open_Sls_Opps__c</fullName>
        <label>Open Sls Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_P1_Cases__c</fullName>
        <label># P1 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_P2_Cases__c</fullName>
        <label># P2 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_P3_Cases__c</fullName>
        <label># P3 Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Percent_Sat__c</fullName>
        <label>%Sat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Pipe_N4Q__c</fullName>
        <label>Pipe (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Ren_Fcst_N4Q__c</fullName>
        <label>Ren Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Ren_L4Q__c</fullName>
        <label>Ren (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Subs_Fcst_N4Q__c</fullName>
        <label>Subs Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Subs_L4Q__c</fullName>
        <label>Subs (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Supp_Fcst_N4Q__c</fullName>
        <label>Supp Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Supp_L4Q__c</fullName>
        <label>Supp (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Total_Fcst_N4Q__c</fullName>
        <label>Total Fcst (N4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Snap_Total_Revenue_L4Q__c</fullName>
        <label>Total Revenue (L4Q)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Snap_ES_Actual_hours__c</fullName>
        <description>Snapshot of Customer ES Actual hours</description>
        <label>Customer Snap ES Actual(hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Snap_ES_Budget__c</fullName>
        <description>Customer Snap of ES Budget</description>
        <label>Customer Snap ES Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Snap_ES_Plan__c</fullName>
        <description>ES plan -customers</description>
        <label>Customer Snap ES Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ghost_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ghost Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Sls_Opps__c</fullName>
        <formula>IF(Cust_Snap_Open_Sls_Opps__c &gt; 0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Sls Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_Number__c</fullName>
        <label>Owner Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Lvl_1_Employee_Number__c</fullName>
        <label>Owner Manager (Lvl 1) Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1_Open__c</fullName>
        <label># P1 Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Open__c</fullName>
        <label># P2 Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Open__c</fullName>
        <label># P3 Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Account Snapshots (Parent Account)</relationshipLabel>
        <relationshipName>Customer_Account_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>IF( 
MONTH(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(MONTH(DATEVALUE(CreatedDate)))), 
(TEXT(MONTH(DATEVALUE(CreatedDate))))) 
+ &quot;/&quot; + 
IF( 
DAY(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(DAY(DATEVALUE(CreatedDate)))), 
(TEXT(DAY(DATEVALUE(CreatedDate)))))</formula>
        <label>Snapshot Date</label>
        <type>Text</type>
    </fields>
    <label>Customer Account Snapshot</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Customer Account Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Account Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>